@@ -1,3 +1,9 @@
+2010-02-05  Sergey Poznyakoff  <gray@gnu.org.ua>
+
+	[BZ #11254]
+	* argp/argp-parse.c (convert_options): Fix improper use of `|'
+	between character values.
+
 2010-04-04  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #11276]
